--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,12 @@
 @import "base"
-@import "reset"
+@import "etc/reset"
+@import "etc/typeography"
 
 body
   position: relative
+  background: $color-light
+
+.page 
+  +outer-container
+  padding: 20px 0
 
