--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,12 @@
 @import "base"
 @import "etc/reset"
 @import "etc/typeography"
+@import "etc/classes"
+
+html, body
+  width: 100%
+  height: 100%
+  position: relative
 
 body
   position: relative
@@ -10,3 +16,7 @@ body
   +outer-container
   padding: 20px 0
 
+
+@import "directives/header"
+@import "directives/discography"
+@import "directives/track"
