--- a/src/jade/directives/track.jade
+++ b/src/jade/directives/track.jade
@@ -1,2 +1,10 @@
-.track
-  p I am a track
+.track(ng-class="{reveal: revealed}")
+  .pre
+    .title-container
+      .title
+        h2 {{ track.title }}
+    .actions
+      .action
+      .action
+      .action
+  .post
