--- a/src/sass/directives/_discography.sass
+++ b/src/sass/directives/_discography.sass
@@ -1,8 +1,8 @@
 [rb-discography], .discography
+  $column: golden-ratio(1em, 3)
+  $gutter: 0px
   +outer-container
-  .track
+  .track-container
     +span-columns(4)
-    +omega(3n)
-    height: 150px
-    background: #f00
-    margin-bottom: 10px
+    +omega
+    margin-bottom: 0px
