--- a/src/jade/directives/header.jade
+++ b/src/jade/directives/header.jade
@@ -1,4 +1,10 @@
 .header
   .oc
-    h1.title Ricky
-      em Bakken
+    .branding
+      h1.title Ricky
+        em Bakken
+    .links
+      a(href="https://twitter.com/RBakk") twitter
+      a(href="https://soundcloud.com/rickybakken") soundcloud 
+
+
