--- a/src/sass/directives/_header.sass
+++ b/src/sass/directives/_header.sass
@@ -1,2 +1,14 @@
 [rb-header], .header
+  height: 60px
+  .branding
+    +span-columns(8)
+    .title
+      font-size: 60px
+      line-height: 60px
+  .links
+    +span-columns(4)
+    line-height: 60px
+    text-align: right
+    a
+      margin-right: 10px
 
