started working on playlist-centric code

--- a/src/jade/directives/discography.jade
+++ b/src/jade/directives/discography.jade
@@ -1,4 +1,4 @@
 .discography
-  .track-container(ng-repeat="track in tracks")
-    .track(rb-track track="track" index="$index")
+  .playlist-container(ng-repeat="playlist in playlists")
+    .pl(rb-playlist playlist="playlist"
 
