--- a/src/sass/directives/_discography.sass
+++ b/src/sass/directives/_discography.sass
@@ -1,9 +1,4 @@
 [rb-discography], .discography
-  $column: golden-ratio(1em, 3)
-  $gutter: 0px
   +outer-container
-  .track-container
-    +span-columns(4)
-    +omega
-    width: 33%
-    margin-bottom: 0px
+  .playlist
+    margin: 0 0 10px 0
