fixing syntatic error in jade template

--- a/src/jade/directives/discography.jade
+++ b/src/jade/directives/discography.jade
@@ -1,4 +1,4 @@
 .discography
   .playlist-container(ng-repeat="playlist in playlists")
-    .pl(rb-playlist playlist="playlist"
+    .pl(rb-playlist playlist="playlist")
 
