starting the loop and viewport services to have window resize updates

--- a/src/jade/directives/playlist.jade
+++ b/src/jade/directives/playlist.jade
@@ -1,6 +1,8 @@
 .playlist
   .title-area
-    h1 {{ playlist.title }}
+    .playlist-image(rb-playlist-image playlist="playlist")
+    .title-container
+      h1.title {{ playlist.title }}
   .art-area
   .track-area
     .track-container(ng-repeat="track in playlist.tracks")
