--- a/src/sass/directives/_playlist.sass
+++ b/src/sass/directives/_playlist.sass
@@ -1,13 +1,30 @@
 .playlist
   position: relative
   border: 10px solid #f0f0f0
+  z-index: 10
 
   .title-area
-    position: relative
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    text-align: center
+    z-index: 5
+    .title-container
+      height: 100%
+      width: 100%
+      display: table
+      text-align: center
+      .title
+        display: table-cell
+        vertical-align: middle
+      
 
   .track-area
     +outer-container
     position: relative
+    z-index: 4
     .track-container
       +span-columns(4)
       +omega
