--- a/src/sass/directives/_playlist.sass
+++ b/src/sass/directives/_playlist.sass
@@ -16,10 +16,12 @@
       width: 100%
       display: table
       text-align: center
+      position: absolute
+      top: 0
+      left: 0
       .title
         display: table-cell
         vertical-align: middle
-      
 
   .track-area
     +outer-container
