addding relase task to uglify and re-template index with min reference

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -8,4 +8,7 @@ html(ng-app="bakken")
     header(rb-header)
     .page
       div(ng-view)
-    script(type='text/javascript', src='/js/app.js')
+    if debug
+      script(type='text/javascript', src='/js/app.js')
+    else
+      script(type='text/javascript', src='/js/app.min.js')
