adding some logic for playlist image caching

--- a/src/jade/directives/playlist.jade
+++ b/src/jade/directives/playlist.jade
@@ -1,6 +1,6 @@
 .playlist
   .title-area
-    .playlist-image(rb-playlist-image playlist="playlist")
+    .playlist-image(rb-playlist-image, playlist="playlist")
     .title-container
       h1.title {{ playlist.title }}
   .art-area
