--- a/src/sass/directives/_playlist.sass
+++ b/src/sass/directives/_playlist.sass
@@ -28,6 +28,8 @@
       top: 0
       left: 0
       .title
+        +text-border(1px, rgba(255,255,255,0.2))
+        color: white
         display: table-cell
         vertical-align: middle
 
