dynamically placing playlists via abs pos and some tweaking to track style

--- a/src/jade/directives/discography.jade
+++ b/src/jade/directives/discography.jade
@@ -1,4 +1,5 @@
 .discography
-  .playlist-container(ng-repeat="playlist in playlists")
-    .pl(rb-playlist playlist="playlist")
+  .playlist-container(ng-repeat="playlist in playlists", ng-style="getPlaylistPosition(playlist, $index)")
+    .inner
+      .pl(rb-playlist playlist="playlist")
 
