--- a/src/jade/directives/playlist.jade
+++ b/src/jade/directives/playlist.jade
@@ -4,9 +4,8 @@
   .inner
     .title-area
       .playlist-image(rb-playlist-image, playlist="playlist")
-      .title-container
+      .playlist-title-container
         h1.title {{ playlist.title }}
-    .art-area
     .track-area
       .track-container(ng-repeat="track in playlist.tracks")
         .track(rb-track track="track")
