--- a/src/sass/directives/_track.sass
+++ b/src/sass/directives/_track.sass
@@ -1,18 +1,14 @@
 [rb-track], .track
-  +transition(all 500ms ease)
+  +transition(all 800ms ease)
   +transform-origin(center top)
-  +transform(translateY(50px) rotateX(90deg))
+  +transform(translateY(10px))
   opacity: 0.0
-  background: #fafafa
+  background: $track-background
   position: relative
   width: 100%
-  height: 220px
+  height: 80px
   overflow: hidden 
-  box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.25), inset 0px 1px 0px white
-
-  &.reveal
-    +transform(translateY(0px) rotateX(0deg))
-    opacity: 1.0
+  border-bottom: 1px solid darken($track-background, 5)
 
   .pre, .post
     position: absolute
@@ -20,10 +16,14 @@
     height: 100%
     top: 0px
     left: 0px
+
+  .post
+    top: 100%
+
   .pre
     .title-container
       display: table
-      height: 110px
+      height: 80px 
       width: 100%
 
       .title
@@ -44,10 +44,6 @@
       .action
         box-shadow: inset 0px 0px 1px rgba(0,0,0,0.25), 0px 0px 1px 0px white
         +transition(all 400ms ease)
-        &:nth-child(1)
-          +transition(all 600ms ease)
-        &:nth-child(2)
-          +transition(all 500ms ease)
         +transform(translateY(20px))
         opacity: 0.0
         width: 30px
@@ -56,9 +52,15 @@
         background: #414141
         display: inline-block
         margin: 0 5px
+        &:nth-child(1)
+          +transition(all 600ms ease)
+        &:nth-child(2)
+          +transition(all 500ms ease)
+        &:hover
+          width: 40px
+          height: 40px
 
   &:hover
     .pre .actions .action
       +transform(translateY(0px))
       opacity: 1.0
-
