--- a/src/sass/directives/_playlist.sass
+++ b/src/sass/directives/_playlist.sass
@@ -7,7 +7,18 @@
     height: 100%
     top: 0px
     left: 0px
-    z-index: 9
+    z-index: 30
+    .spinner
+      width: 100%
+      height: 100%
+      position: relative
+      display: block
+      svg
+        display: block
+        position: absolute
+        left: 50%
+        top: 50%
+        margin: -100px 0 0 -100px
 
   .inner
     +transition(all 1200ms ease)
