--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,7 +1,8 @@
 @import "base"
 @import "etc/reset"
-@import "etc/typeography"
 @import "etc/classes"
+@import "etc/typeography"
+@import "etc/form-elements"
 
 html, body
   width: 100%
