--- a/src/sass/directives/_playlist.sass
+++ b/src/sass/directives/_playlist.sass
@@ -37,11 +37,6 @@
     background: white
     opacity: 1.0
 
-  &:hover
-    .track
-      +transform(translateY(0px) rotateX(0deg))
-      opacity: 1.0
-
   .title-area
     opacity: 1.0
     position: absolute
@@ -51,6 +46,15 @@
     height: 100%
     text-align: center
     z-index: 5
+
+    button.reveal
+      +transition(all 500ms ease)
+      +transform(translateY(50px))
+      opacity: 0.0
+      background: transparent
+      padding: 10px 5px
+      border: none
+
     .playlist-title-container
       height: 100%
       width: 100%
@@ -59,10 +63,42 @@
       position: absolute
       top: 0
       left: 0
+      padding: 40px
       .title
+        position: relative
+        .span.border
+          &:after, &:before
+            +transition(opacity 500ms ease, width 500ms ease, height 500ms ease, left 500ms ease, top 500ms ease)
+            display: block
+            position: absolute
+            content: ''
+            background: white
+            opacity: 0.0
+          &.top
+            &:after, &:before
+              left: 50%
+              width: 0%
+              height: 1px
+            &:after
+              top: 0px
+            &:before
+              bottom: 0px
+
+          &.sides
+            &:after, &:before
+              top: 50%
+              height: 0%
+              width: 1px
+            &.before
+              left: 0px
+            &:after
+              right: 0px
+
         color: white
         display: table-cell
         vertical-align: middle
+        .inner
+          padding: 0 40px
 
   .track-area
     position: relative
@@ -94,10 +130,6 @@
         .track
           +transition(all 1000ms ease 700ms)
 
-
-
-
-
       &:last-child
         .track
           box-shadow: none
@@ -109,3 +141,30 @@
     left: 0px
     width: 100%
     height: 100%
+
+  &.active
+    .track-area
+      .track
+        +transform(translateY(0px) rotateX(0deg))
+        opacity: 1.0
+
+  &:hover
+    .title-area
+      button.reveal
+        +transform(translateY(0px))
+        opacity: 1.0
+
+      .playlist-title-container
+        .title
+          .span.border
+            &:after, &:before
+              opacity: 1.0
+            &.top
+              &:after, &:before
+                width: 100%
+                left: 0%
+            &.sides
+              &:after, &:before
+                height: 100%
+                top: 0%
+
