--- a/src/jade/directives/track.jade
+++ b/src/jade/directives/track.jade
@@ -5,6 +5,9 @@
         h2 {{ track.title }}
     .actions
       .action
+        button.twitter
       .action
+        button.play(ng-click="play()")
       .action
+        button.soundcloud
   .post
