changing playlist title color on hover

--- a/src/jade/directives/playlist.jade
+++ b/src/jade/directives/playlist.jade
@@ -8,7 +8,7 @@
           .span.border.sides
           .span.border.top
           .inner
-            h1 {{ playlist.title }}
+            h1.playlist-title {{ playlist.title }}
             button.reveal(ng-click="reveal()") tracks
     .track-area
       .track-container(ng-repeat="track in playlist.tracks")
