--- a/src/sass/var/_colors.sass
+++ b/src/sass/var/_colors.sass
@@ -3,4 +3,5 @@ $color-light: #fdfdfd
 $color-orange: #faa54c
 
 $color-links: $color-orange
+$color-playlist-title-hover: $color-orange
 $track-background: #fafafa
