adding a spinnerStop event for the loader - spinner communication

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,9 +1,13 @@
 doctype html
 html(ng-app="bakken")
   head
+    meta(charset="utf-8")
     title(rb-title) Ricky Bakken
+    meta(name="description" value="rickky bakken")
+    meta(name="keywords" value="rickky, bakken, bass, music, artist, soundcloud")
     link(rel='stylesheet', href='/fonts/include.css', type='text/css')
     link(rel='stylesheet', href='/css/app.css', type='text/css')
+    // created by Danny Hadley (dadleyy.com)
   body
     .loader(rb-loader)
     header(rb-header)
