adding the soundcloud and twitter actions to the tracks and making their hover way more sexy

--- a/src/jade/directives/track.jade
+++ b/src/jade/directives/track.jade
@@ -2,12 +2,12 @@
   .pre
     .title-container
       .title
-        h2 {{ track.title }}
+        h2.track-title {{ track.title }}
     .actions
       .action
-        button.twitter
+        button.twitter(ng-click="goTo('twitter')")
       .action
         button.play(ng-click="play()")
       .action
-        button.soundcloud
+        button.soundcloud(ng-click="goTo('soundcloud')")
   .post
