adding optional stopOn attribute for spinners to be dictated when to stop

--- a/src/jade/directives/loader.jade
+++ b/src/jade/directives/loader.jade
@@ -5,4 +5,4 @@
       .left
         h3.load-text {{ text }}
       .right
-        .spinner(rb-spinner width="60" height="60")
+        .spinner(rb-spinner width="60" height="60" stop-on="loaderFinished")
