keeping border on hover white

--- a/src/sass/directives/_playlist.sass
+++ b/src/sass/directives/_playlist.sass
@@ -166,7 +166,7 @@
           .span.border
             &:after, &:before
               opacity: 1.0
-              background: $color-playlist-title-hover
+              /* background: $color-playlist-title-hover */
             &.top
               &:after, &:before
                 width: 100%
