--- a/src/sass/directives/_playlist.sass
+++ b/src/sass/directives/_playlist.sass
@@ -36,6 +36,11 @@
     +transition(all 500ms ease)
     background: white
     opacity: 1.0
+    position: absolute
+    width: 100%
+    height: 100%
+    top: 0px
+    left: 0px
 
   .title-area
     opacity: 1.0
