changing hover color

--- a/src/sass/directives/_playlist.sass
+++ b/src/sass/directives/_playlist.sass
@@ -160,7 +160,7 @@
   &:hover
     .title-area
       .playlist-title
-        color: $color-playlist-title-hover
+        color: red
 
       button.reveal
         +transform(translateY(0px))
