fixing height calculation - saving top of playlist for future ref

--- a/src/sass/directives/_playlist.sass
+++ b/src/sass/directives/_playlist.sass
@@ -160,7 +160,7 @@
   &:hover
     .title-area
       .playlist-title
-        color: red
+        color: $color-orange
 
       button.reveal
         +transform(translateY(0px))
