changed default route to discography and added resume page. introduced icons

--- a/src/jade/directives/discography.jade
+++ b/src/jade/directives/discography.jade
@@ -1,5 +1,5 @@
 .discography(ng-style="getDiscographyHeight()")
   .playlist-container(ng-repeat="playlist in playlists", ng-style="getPlaylistPosition(playlist, $index)")
-    .inner
+    .inner(ng-class="")
       .pl(rb-playlist, playlist="playlist", order="$index")
 
