--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -8,8 +8,10 @@ html(ng-app="bakken")
     link(rel='icon', href='http://media.bakken.fm/bakken.png')
     link(rel='shortcut icon', href='http://media.bakken.fm/bakken.png')
     link(rel='stylesheet', href='/fonts/include.css', type='text/css')
+    link(rel='stylesheet', href='/vendor/zocial/zocial.css', type='text/css')
+    link(rel='stylesheet', href='/vendor/ionicons/css/ionicons.css', type='text/css')
     link(rel='stylesheet', href='/css/app.css', type='text/css')
-    // created by Danny Hadley (dadleyy.com)
+    // created by Danny Hadley (@dadley)
   body
     .loader(rb-loader)
     header(rb-header)
