--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -3,6 +3,7 @@
 @import "etc/classes"
 @import "etc/typeography"
 @import "etc/form-elements"
+@import "shared/iconography"
 
 html, body
   width: 100%
