--- a/src/jade/directives/header.jade
+++ b/src/jade/directives/header.jade
@@ -1,10 +1,11 @@
 .header
   .oc
     .branding
-      h1.title Ricky
+      a.title(href="/") Ricky
         em Bakken
     .links
-      a(href="https://twitter.com/RBakk") twitter
-      a(href="https://soundcloud.com/rickybakken") soundcloud 
+      a.icon.ion.resume(href="/resume")
+      a.icon.twitter(href="https://twitter.com/RBakk")
+      a.icon.soundcloud(href="https://soundcloud.com/rickybakken")
 
 
