--- a/src/sass/directives/_loader.sass
+++ b/src/sass/directives/_loader.sass
@@ -1,6 +1,6 @@
 .loader
   position: fixed
-  top: 0px
+  bottom: 0px
   left: 0px
   width: 100%
   height: 0%
@@ -9,7 +9,7 @@
   .overlay
     +transition(opacity 500ms ease)
     position: absolute
-    top: 0px
+    bottom: 0px
     left: 0px
     background: rgba(255,255,255,0.75)
     width: 100%
@@ -21,12 +21,12 @@
   .content
     +transition(top 300ms ease)
     position: absolute
-    top: -100px
+    bottom: -100px
     left: 0px
     width: 100%
     z-index: 3
     background: white
-    box-shadow: 0px 1px 0px rgba(0,0,0,0.25)
+    box-shadow: 0px -1px 0px rgba(0,0,0,0.25)
 
     > .inner
       +outer-container
@@ -53,4 +53,4 @@
       opacity: 1.0
       display: block
     .content
-      top: 0px
+      bottom: 0px
