--- a/src/jade/directives/header.jade
+++ b/src/jade/directives/header.jade
@@ -4,8 +4,9 @@
       a.title(href="/") Ricky
         em Bakken
     .links
-      a.icon.ion.resume(href="/resume")
-      a.icon.twitter(href="https://twitter.com/RBakk")
       a.icon.soundcloud(href="https://soundcloud.com/rickybakken")
+      a.icon.twitter(href="https://twitter.com/RBakk")
+      a.icon.ion.resume(href="/resume")
+      a.icon.ion.discography(href="/discography")
 
 
