--- a/src/sass/directives/_header.sass
+++ b/src/sass/directives/_header.sass
@@ -16,15 +16,18 @@
 
   .links
     +span-columns(4)
+    +clearfix
     line-height: 60px
     text-align: right
 
     .icon
       width: 50px
       height: 50px
+      display: block
+      float: right
+      margin: 10px 0 0 0
 
       &:after
         text-align: center
         font-size: 25px
-        margin-right: 10px
-
+        line-height: 45px
