--- a/src/sass/shared/_iconography.sass
+++ b/src/sass/shared/_iconography.sass
@@ -9,6 +9,7 @@
     content: ''
     font-family: 'zocial'
     display: block
+    margin: 0 auto
     color: black
     font-size: 20px
     line-height: 30px
@@ -19,6 +20,9 @@
 
   &.resume:after
     content: '\f127'
+
+  &.discography:after
+    content: '\f12d'
 
   &.twitter:after
     content: '\54'
