--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -11,7 +11,7 @@ html(ng-app="bakken")
     link(rel='stylesheet', href='/vendor/zocial/zocial.css', type='text/css')
     link(rel='stylesheet', href='/vendor/ionicons/css/ionicons.css', type='text/css')
     link(rel='stylesheet', href='/css/app.css', type='text/css')
-    // created by Danny Hadley (@dadley)
+    // created by Danny Hadley (@dadleyy)
   body
     .loader(rb-loader)
     header(rb-header)
