starting some responsive rules for playlist images and text

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -5,6 +5,7 @@ html(ng-app="bakken")
     title(rb-title) Ricky Bakken
     meta(name="description" value="rickky bakken")
     meta(name="keywords" value="rickky, bakken, bass, music, artist, soundcloud")
+    meta(name="viewport" content="width=device-width, user-scalable=no")
     link(rel='icon', href='http://media.bakken.fm/bakken.png')
     link(rel='shortcut icon', href='http://media.bakken.fm/bakken.png')
     link(rel='stylesheet', href='/fonts/include.css', type='text/css')
