--- a/src/sass/directives/_loader.sass
+++ b/src/sass/directives/_loader.sass
@@ -41,6 +41,15 @@
     font-size: 28px
     line-height: 60px
 
+    +media(max-width 1000px)
+      font-size: 24px
+
+    +media(max-width 700px)
+      font-size: 20px
+
+    +media(max-width 400px)
+      font-size: 14px
+
   .spinner
     +outer-container
     svg
