--- a/src/sass/directives/_playlist.sass
+++ b/src/sass/directives/_playlist.sass
@@ -69,11 +69,21 @@
       top: 0
       left: 0
       padding: 40px
+
       .title
         position: relative
 
         h1.playlist-title
           +transition(color 500ms ease)
+
+          +media(max-width 1020px)
+            font-size: 40px
+
+          +media(max-width 880px)
+            font-size: 34px
+
+          +media(max-width 820px)
+            font-size: 30px
 
         .span.border
           &:after, &:before
