--- a/src/sass/directives/_header.sass
+++ b/src/sass/directives/_header.sass
@@ -22,6 +22,35 @@
     line-height: 60px
     text-align: right
 
+    +media(max-width 820px)
+      width: 50px
+      height: 50px
+      float: right
+      overflow: hidden
+      display: block
+
+      &.expanded
+        overflow: visible
+
+        .icon
+          opacity: 1.0
+
+      .icon
+        +transition(opacity 400ms ease)
+        float: none
+        margin: 0
+        z-index: 50
+        position: relative
+        opacity: 0.0
+        background: white
+        border-radius: 25px
+        &.expander
+          opacity: 1.0
+    
+
+    .expander
+      display: none
+
     .icon
       width: 50px
       height: 50px
