fixing some media queries on header and loader

--- a/src/jade/directives/header.jade
+++ b/src/jade/directives/header.jade
@@ -1,8 +1,8 @@
 .header
   .oc
     .branding
-      a.title(href="/") Ricky
-        em Bakken
+      a.title.thin(href="/") R<i>icky</i>
+        em.light B<i>akken</i>
     .links(ng-class="{expanded: expanded}")
       a.icon.ion.menu.expander(ng-click="toggle()" href="#")
       a.icon.soundcloud(href="https://soundcloud.com/rickybakken")
