--- a/src/jade/directives/loader.jade
+++ b/src/jade/directives/loader.jade
@@ -2,7 +2,7 @@
   .overlay
   .content
     .inner
-      .left
-        h3.load-text {{ text }}
       .right
         .spinner(rb-spinner width="60" height="60" stop-on="loaderFinished")
+      .left
+        h3.load-text.regular {{ text }}
