--- a/src/sass/etc/_classes.sass
+++ b/src/sass/etc/_classes.sass
@@ -1,2 +1,11 @@
 .oc
   +outer-container
+
+.light
+  font-family: $font-light
+
+.thin
+  font-family: $font-thin
+
+.regular
+  font-family: $font-regular
