--- a/src/sass/var/_fonts.sass
+++ b/src/sass/var/_fonts.sass
@@ -1,5 +1,5 @@
-$font-light: 'globerthin'
-$font-thin: 'globerlight'
+$font-thin: 'globerthin'
+$font-light: 'globerlight'
 $font-regular: 'glober_regularregular'
 
 $font-largest: 80px
