--- a/src/sass/directives/_header.sass
+++ b/src/sass/directives/_header.sass
@@ -8,10 +8,10 @@
       font-size: 60px
       line-height: 60px
       color: lighten(black, 20)
-      font-family: $font-light
 
-      em
-        font-family: $font-thin
+      +media(max-width 500px)
+        i
+          display: none
 
       &:hover
         text-shadow: none
@@ -33,10 +33,12 @@
         overflow: visible
 
         .icon
+          +transform(translateY(0px))
           opacity: 1.0
 
       .icon
-        +transition(opacity 400ms ease)
+        +transition(all 400ms ease)
+        +transform(translateY(-20px))
         float: none
         margin: 0
         z-index: 50
@@ -44,12 +46,11 @@
         opacity: 0.0
         background: white
         border-radius: 25px
-        &.expander
-          opacity: 1.0
-    
 
-    .expander
-      display: none
+        &.expander
+          +transform(translateY(0px))
+          opacity: 1.0
+          display: block
 
     .icon
       width: 50px
@@ -57,6 +58,20 @@
       display: block
       float: right
       margin: 10px 0 0 0
+      text-align: center
+      padding: 0
+
+      &:after
+        display: block
+        width: 50px
+        height: 50px
+        left: 0px
+        top: 0px
+        position: absolute
+        line-height: 50px
+
+    .expander
+      display: none
 
       &:after
         text-align: center
