--- a/src/sass/directives/_track.sass
+++ b/src/sass/directives/_track.sass
@@ -42,17 +42,20 @@
 
   .pre
     .title-container
-      display: table
       height: 80px 
-      width: 100%
+      margin: 0 10px
+
       .title
-        display: table-cell
+        line-height: 80px
         text-align: center
-        vertical-align: middle
+
       h2.track-title
         +transition(transform 500ms ease)
         +transform(translateY(0px))
         font-size: 20px
+        overflow: hidden
+        text-overflow: ellipsis
+        white-space: nowrap
 
     .actions
       position: absolute
