styling on the resume page

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -19,6 +19,7 @@ body
   padding: 20px 0
 
 
+@import "views/resume"
 @import "directives/header"
 @import "directives/discography"
 @import "directives/playlist"
