adding copy to header

--- a/src/jade/directives/header.jade
+++ b/src/jade/directives/header.jade
@@ -3,6 +3,8 @@
     .branding
       a.title.thin(href="/") R<i>icky</i>
         em.light B<i>akken</i>
+      p.rb.inline-block.thin.bass-player
+        small Bass Player
     .links(ng-class="{expanded: expanded}")
       a.icon.ion.menu.expander(ng-click="toggle()" href="#")
       a.icon.soundcloud(href="https://soundcloud.com/rickybakken")
