--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -18,6 +18,8 @@ body
   +outer-container
   padding: 20px 0
 
+.rb.inline-block
+  display: inline-block
 
 @import "views/resume"
 @import "directives/header"
